# papiplot

./: README.md  index.html  papiplot.html
papiplot/: .cproject  .project  CMakeLists.txt  tablefilename
papiplot/src/: plot.c
papiplot/test/: anim.c  example.c  gnuplot.txt  sinepng.c
